--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,11 @@ description = "A COC dice plugin for nonebot2"
 authors = [
     {name = "BigOrangeQWQ", email = "2284086963@qq.com"},
 ]
-dependencies = []
+dependencies = [
+    "nonebot2>=2.0.0rc2",
+    "nonebot-adapter-onebot>=2.2.0",
+    "pydantic>=1.10.4",
+]
 requires-python = ">=3.9"
 readme = "README.md"
 license = {text = "MIT"}
