--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,20 +2,17 @@
 
 [project]
 name = "nonebot_plugin_orangedice"
-version = "0.1.0"
-description = "A COC dice plugin for nonebot2"
+version = "0.2.0"
+description = "A COC dice for nonebot2"
 authors = [
     {name = "BigOrangeQWQ", email = "2284086963@qq.com"},
 ]
-dependencies = [
-    "nonebot2>=2.0.0rc2",
-    "nonebot-adapter-onebot>=2.2.0",
-    "pydantic>=1.10.4",
-]
-requires-python = ">=3.9"
+dependencies = []
+requires-python = ">=3.8"
 readme = "README.md"
 license = {text = "MIT"}
 
 [build-system]
 requires = ["pdm-pep517>=1.0"]
 build-backend = "pdm.pep517.api"
+c
