--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ authors = [
     {name = "BigOrangeQWQ", email = "2284086963@qq.com"},
 ]
 dependencies = [
-    "nonebot2>=2.0.0rc2",
-    "nonebot-adapter-onebot>=2.2.0",
-    "pydantic>=1.10.4",
+    "nonebot2>=2.0.0b5",
+    "nonebot-adapter-onebot>=2.1.3",
+    "pydantic>=1.9.2",
     "sqlmodel>=0.0.8",
 ]
 requires-python = ">=3.9"
