--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,15 @@ description = "A COC dice for nonebot2"
 authors = [
     {name = "BigOrangeQWQ", email = "2284086963@qq.com"},
 ]
-dependencies = []
-requires-python = ">=3.8"
+dependencies = [
+    "pydantic>=1.9.2",
+    "nonebot2>=2.0.0b5",
+    "nonebot-adapter-onebot>=2.1.3",
+]
+requires-python = ">=3.8,<4.0"
 readme = "README.md"
 license = {text = "MIT"}
 
 [build-system]
 requires = ["pdm-pep517>=1.0"]
 build-backend = "pdm.pep517.api"
-c
