发布0.3.1版本，更新readme

--- a/.pdm.toml
+++ b/.pdm.toml
@@ -1,2 +1,2 @@
 [python]
-path = "G:\\自己的项目\\nonebot_plugin_orangedice\\.venv\\Scripts\\python.exe"
+path = "G:\\SelfProject\\nonebot_plugin_orangedice\\.venv\\Scripts\\python.EXE"
