--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,16 +2,16 @@
 
 [project]
 name = "nonebot_plugin_orangedice"
-version = "0.3.8"
+version = "0.3.9"
 description = "A COC dice plugin for nonebot2"
 authors = [
     {name = "BigOrangeQWQ", email = "2284086963@qq.com"},
 ]
 dependencies = [
-    "nonebot2>=2.0.0b5",
-    "nonebot-adapter-onebot>=2.1.3",
     "pydantic>=1.9.2",
     "sqlmodel>=0.0.8",
+    "nonebot2>=2.0.1",
+    "nonebot-adapter-onebot>=2.2.3",
 ]
 requires-python = ">=3.8"
 readme = "README.md"
