--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pdm
+        python -m pip install tomlkit
     - name: Sync lock package 
       run: |
         pdm sync
